--- a/style.css
+++ b/style.css
@@ -3,27 +3,80 @@
 }
 
 body {
-    font-family: sans-serif;
+  background: white;
+}
+
+.lists-app {
+  color: #161616;
+  width: 100%;
+  max-width: 600px;
+  font-family: sans-serif;
+  margin: 0 auto;
+}
+
+.add-list {
+  color: #161616;
+  width: 100%;
+  max-width: 600px;
+  font-family: sans-serif;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+font-size: 27px;
+font-weight: 400;
+border: 2px solid #c0c0c0;
+padding: 35px 40px;
+}
+
+.add-list input {
+    width: 75%;
+    font-size: 27px;
+    font-weight: 400;
+    border: 0px solid #c0c0c0;
+    padding: 35px 40px;
+}
+
+.list-table {
+    width: 100%;
+    border: 2px solid #cacaca;
+    border-top: none;
+    padding: 25px 40px;
+    margin: 0;
+    background: white;
+}
+
+.list-title {
+    display: block;
+    list-style-type: none;
+    font-size: 30px;
+    margin-top: 25px;
+}
+
+.list-title:first-child {
+    margin-top: 0;
+}
+
+.list-title .check {
+    display: inline-block;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+    vertical-align: middle;
+    margin-right: 20px;
+    background-image: url(check.png);
+}
+
+.finish .check {
+    background-position: -51px 0;
+}
+
+.delete-list {
+    float: right;
+    color: #cacaca;
+    cursor: pointer;
     font-weight: 300;
-    background-color: #eaeaea;
+    margin-top: 5px;
 }
-
-#mount-point {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-}
-
 .note {
     width: 200px;
     height: auto;
@@ -79,12 +132,13 @@ body {
 }
 
 .textarea {
-    width: 100%;
-    resize: none;
-    margin: 5px;
-    font-size: 14px;
-    border: none;
-    font-weight: 300;
+  width: 82%;
+  display: inline-block;
+  font-size: 33px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle;
 }
 
 .textarea:focus {
@@ -106,8 +160,24 @@ body {
     text-transform: uppercase;
     text-decoration:none;
     text-shadow:0px 1px 0px #2f6627;
+    margin-left: 25px;
 }
 
+.list-sort {
+  width: 100%;
+  text-align: center;
+  padding: 18px 40px;
+  margin: 0 auto;
+}
+
+.menu-item {
+    color: #cacaca;
+    display: inline-block;
+    list-style-type: none;
+    font-size: 25px;
+    cursor: pointer;
+    margin-left: 20px;
+}
 .add-button:hover {
     background-color:#5cbf2a;
 }
@@ -159,4 +229,19 @@ body {
     background-repeat: no-repeat;
     -webkit-background-size: 16px 16px;
     background-size: 16px 16px;
+}
+.list-sort li:first-child {
+    margin-left: 0;
+}
+.list-sort li {
+    color: #cacaca;
+    display: inline-block;
+    list-style-type: none;
+    font-size: 25px;
+    cursor: pointer;
+    margin-left: 20px;
+    text-transform: capitalize;
+}
+.list-sort .active {
+  color: #161616;
 }
